--- a/src/index.html
+++ b/src/index.html
@@ -54,27 +54,6 @@
             </span>
           </div>
           <div class="task-list-contents">
-            <div class="flex-box task-item">
-              <div class="task-item-content">
-                <div class="task-item-content-left">
-                  <span class="checkbox-container" data-control-action="toggle">
-                     <span class="custom-checkbox"><i class="fa fa-square-o"></i></span>
-                     <span class="custom-checkbox"><i class="fa fa-check-square"></i></span>
-                  </span>
-                </div>
-                <div class="task-item-content-center">
-                  <span class="task-item-name">Task description should be placed here</span>
-                  <input class="task-item-input" data-control-action="edit" type="text" value="Task description should be placed here"/>
-                </div>
-                <div class="task-item-content-right">
-                  <span class="task-item-creation-date">09:00 AM</span>
-                  <span class="task-item-due-date">21:00 AM</span>
-                </div>
-              </div>
-              <div class="task-item-controls">
-                <span class="task-item-control" data-control-action="delete"><i class="fa fa-trash"></i></span>
-              </div>
-            </div>
           </div>
           <div class="flex-box task-list-footer">
             <span class="task-list-action" data-control-action="clear">Clear all</span>
@@ -102,7 +81,7 @@
           </div>
         </div>
         <div class="task-item-controls">
-          <span class="task-item-control" data-control-action="delete"><i class="fa fa-trash"></i></span>
+          <span class="task-item-control task-item-delete"><i class="fa fa-trash"></i></span>
         </div>
       </div>
     </div>
